--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello</title>
+	<style type="text/css">
+		H1 {
+			color: blue;
+		}
+	</style>
 </head>
 <body>
 	<h1>Welcome to my website!</h1>
